# dublin-electricity-substations

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  extract-dublin-slr-stations.md  geocode-from-slr-pdf-to-dublin.md  geocode-stations.md  link-slr-station-to-nearest-network-station.md  link-small-areas-to-nearest-stations.md  link-stations-to-slr-data.md  pyproject.toml  temp.yaml
data/: dublin-station-names.txt  dublin-station-slr-totals.geojson  dublin-station-slr.xlsx  dublin-stations-nominatim.geojson  dublin_boundary.geojson
data/raw/: dublin-station-slr.xlsx
des/: clean.py  convert.py  distance.py  download.py  extract.py  io.py  join.py  plot.py  unzip.py
dublin_electricity_network/: __init__.py  cluster.py  distance.py  download.py  io.py  join.py  paths.py
esb/: __init__.py  paths.py  plot.py
notebooks/: cluster_esbmap_stations.py  cluster_esbmap_stations_ITM.py  cluster_esbmap_stations_by_proximity.py  estimate_secondary_station_voltages.py  extract-dublin-slr-stations.md  geocode-stations.md  get_data.py  link-slr-stations-to-nearest-network-stations.md  link-small-areas-to-nearest-network-stations.md  link-small-areas-to-nearest-slr-stations.md  link_cad_stations_to_esbmap_stations.py  link_cad_stations_to_map_stations.ipynb  link_cad_stations_to_map_stations.py  link_cad_stations_to_nearest_heatmap_station.py  link_demands_to_clustered_stations.py  link_esbmap_stations_to_osm.py  link_map_stations_to_osm.py  link_slr_stations_to_nearest_cad_stations.py  link_small_areas_stations_to_nearest_capacitymap_stations.py  link_small_areas_to_cad_stations_via_network.ipynb  link_small_areas_to_cad_stations_via_network.py  link_small_areas_to_cad_stations_via_network_OLD.py  link_small_areas_to_clustered_stations.py  link_small_areas_to_nearest_esbmap_stations.py  link_small_areas_to_nearest_heatmap_stations.py  link_small_areas_to_nearest_slr_stations_via_network.py  plot_heatmap_vs_capacitymap_stations.py
