[tool.poetry]
name = "dublin-electricity-network"
version = "0.1.0"
description = ""
authors = ["    "]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.7 || ^3.8"
dask = {extras = ["delayed"], version = "^2021.1.1"}
sklearn = "^0.0"
tqdm = "^4.56.0"
matplotlib = "^3.3.3"
geopandas = "^0.8.2"
pygeos = "^0.9"
ipywidgets = "^7.6.3"
momepy = "^0.4.2"
openpyxl = "^3.0.6"
osmnx = "^1.0.1"
string-grouper = "^0.3.2"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
jupytext = "^1.9.1"
pre-commit = "^2.10.1"
flake8 = "^3.8.4"
jupyter-contrib-nbextensions = "^0.5.1"
ipykernel = "^5.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"